@@ -33,6 +33,13 @@ replace restart {
 // Should probably check for notVolatile(%2), too, but gives many false positives and no regression tests fail.
 
 replace restart {
+	ld	%1, %2 + %3
+} by {
+	; peephole 0a' removed dead load from %2 + %3 into %1.
+} if notVolatile(%1), notUsed(%1)
+// Should probably check for notVolatile(%2), too, but gives many false positives and no regression tests fail.
+
+replace restart {
 	ld	%1, %2
 	ld	%3, %1
 } by {
@@ -58,7 +65,7 @@ replace restart {
 	ld	%5, %2
 	; peephole 0b'-v4 loaded %5 from %2 directly instead of going through %1.
 	ld	%3, %4
-} if canAssign(%5 %2), notVolatile(%1), operandsNotRelated(%1 %4), operandsNotRelated(%1 %3), operandsNotRelated(%4 %5), notUsed(%1), notSame(%3 %4 '(hl)' '(de)' '(bc)'), notVolatile(%4)
+} if canAssign(%5 %2), notVolatile(%1), operandsNotRelated(%1 %4), operandsNotRelated(%1 %3), operandsNotRelated(%4 %5), notUsed(%1), notSame(%3 %4 '(hl)' '(de)' '(bc)'), notVolatile(%4), notSame(%1 '(hl)' '(de)' '(bc)'), notSame(%5 '(hl)' '(de)' '(bc)')
 
 replace restart {
 	ld	%1, %2 (%3)
